@@ -1,3 +1,8 @@
+1999-03-24  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* preferences.c, main.c, config.c: add ability to use a custom
+	format string for offset display.
+
 1999-03-22  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* hex-document.c (find_string_backward): fixed it a bit to
